--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ deploy:
   provider: s3
   access_key_id: $AWS_S3_ACCESS_KEY
   secret_access_key: $AWS_S3_SECRET_KEY
-  bucket: kalob.net-blog
+  bucket: blog.kalob.net
   skip_cleanup: true
   local-dir: build
   acl: public_read
