--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "prismjs": "^1.15.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-ga": "^2.7.0",
     "react-navi": "^0.13.3",
     "react-navi-helmet-async": "^0.13.3",
     "react-scripts-mdx": "3.0.3",
