--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "slugify": "^1.3.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "export PORT=8080 && react-scripts start",
     "build": "react-scripts build && navi-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
