--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -14,7 +14,7 @@ jobs:
         with: 
           node-version: '16.x'
       - name: Install dependencies
-        run: yarn install
+        run: yarn ci
       - name: Compile project
         run: yarn build
       - name: sync
