--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -12,7 +12,7 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v1
         with: 
-          node-version: '16.x'
+          node-version: '11.15'
       - name: Install dependencies
         run: npm ci
       - name: Compile project
